--- a/contact.html
+++ b/contact.html
@@ -35,12 +35,12 @@
           <span class="icon-bar"></span>
         </button>
 
-      <div class="collapse navbar-collapse" id="navbar-collapse">
-        <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+          <ul class="nav navbar-nav ">
+            <li><a href="./index.html" title="">01 : 메인</a></li>
+            <li><a href="./works.html" title="">02 : 작업물</a></li>
+            <li><a href="./about.html" title="">03 : 프로필</a></li>
+            <li><a href="./contact.html" title="">04 : 협업 문의</a></li>
           <li><a href="./components.html" title="">05 : Components</a></li>
         </ul>
 
@@ -55,7 +55,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">03 : Contact me</h1>
+            <h1 class="h2">03 : 협업 문의</h1>
           </div>
           
           <div class="row">
@@ -80,23 +80,23 @@
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
-                          + 33 9 07 45 12 65
+                          + 현재 구직하지 않음
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          e-mail@mail.io
+                          instagram: @jiwoongcheonjae
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          42 rue Moulbert 75016 Paris
+                          17 incheon Republic of Korea
                         </li>
                       </ul>
-                      <h3>Follow me on social networks</h3>
-                      <a href="http://www.facebook.com" title="" class="fa-icon">
+                      <!-- <h3>Follow me on social networks</h3>
+                      <a href="http://www.instagram.com" title="" class="fa-icon">
                         <i class="fa fa-facebook"></i>
                       </a>
                       <a href="http://www.twitter.com" title="" class="fa-icon">
@@ -104,7 +104,7 @@
                       </a>
                       <a href="http://www.linkedin.com" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
-                      </a>
+                      </a> -->
 
                     </div>
                   </div>
@@ -123,7 +123,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <p>© UNTITLED | Website created by Choi Ji woong </p>
       </div>
     </div>
   </div>
