--- a/works.html
+++ b/works.html
@@ -35,12 +35,12 @@
           <span class="icon-bar"></span>
         </button>
 
-      <div class="collapse navbar-collapse" id="navbar-collapse">
-        <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+          <ul class="nav navbar-nav ">
+            <li><a href="./index.html" title="">01 : 메인</a></li>
+            <li><a href="./works.html" title="">02 : 작업물</a></li>
+            <li><a href="./about.html" title="">03 : 프로필</a></li>
+            <li><a href="./contact.html" title="">04 : 협업 문의</a></li>
           <li><a href="./components.html" title="">05 : Components</a></li>
         </ul>
 
@@ -174,8 +174,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
-      </div>
+        <p>© UNTITLED | Website created by Choi Ji woong </p>      </div>
     </div>
   </div>
 </footer>
