--- a/works.html
+++ b/works.html
@@ -57,7 +57,7 @@
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
           <h1 class="h2">02 : Works</h1>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
+          <p>이곳에 p코드 설명문 들어갈 예정</p>
         </div>
       </div>
 
@@ -99,8 +99,8 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
+                        <h3>설명문 들어갈 예정</h3>
+                        <p>설명문 들어갈 예정</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -117,8 +117,8 @@
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
-                      <h3>Nulla scelerisque</h3>
-                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
+                      <h3>설명문 들어갈 예정</h3>
+                      <p>설명문 들어갈 예정</p>
                       <a href="./work.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
@@ -128,8 +128,8 @@
                       </a>
                       <div class="card-container">
                         <h4>005/006</h4>
-                        <h3>Fringilla sit amet</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
+                        <h3>설명문 들어갈 예정</h3>
+                        <p>설명문 들어갈 예정</p>
                         <a href="./work.html" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -140,8 +140,8 @@
                       </a>
                       <div class="card-container">
                         <h4>006/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
+                        <h3>설명문 들어갈 예정</h3>
+                        <p>설명문 들어갈 예정</p>
                         <a href="./work.html" class="btn btn-default">Discover</a>
                       </div>
                     </div>
