--- a/works.html
+++ b/works.html
@@ -90,7 +90,7 @@
                           <br>크리에이터 최고기
                         </h3>
                         <b>1280x720 크기라는 제한된 공간 속, 영상 내용을 함축하여<br> 구독자들의 시선을 <br> 집중되게 하라.</b>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <a href="./work2.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
